--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      # run: mvn clean package
-      run: mvn -B package --file pom.xml
+      run: mvn clean package
+      # run: mvn -B package --file pom.xml
