--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,7 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn clean package
-      # run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
+      # run: mvn compile
+      # run: mvn clean package
+      # run: mvn -f github-actions-java-maven/pom.xml clean verify
