--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
         env:
           MYSQL_DATABASE: trolleyes
           MYSQL_USER: root
-          # MYSQL_PASSWORD: bitnami
+          MYSQL_PASSWORD: bitnami
           MYSQL_ROOT_PASSWORD: bitnami
           # MYSQL_ALLOW_EMPTY_PASSWORD: yes
         ports:
         - 3306
-        # options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: actions/checkout@v2
