--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
         image: mysql:5.7
         env:
           MYSQL_DATABASE: trolleyes
-          MYSQL_USER: root
-          MYSQL_PASSWORD: bitnami
+          # MYSQL_USER: root
+          # MYSQL_PASSWORD: bitnami
           MYSQL_ROOT_PASSWORD: bitnami
           # MYSQL_ALLOW_EMPTY_PASSWORD: yes
         ports:
