--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    - name: Verify MySQL connection
+      run: |
+        mysql --version
+        sudo apt-get install -y mysql-client
+        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami -e "SHOW DATABASES"
+      
+    - name: Setting Up DB
+      run: |
+        mysql -Tv -h mysql -P 3306 --protocol=tcp -u root -pbitnami < ./trolleyes.sql            
+      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
