--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       
     - name: Setting Up DB
       run: |
-        mysql -u root -p bitnami trolleyes < ./trolleyes.sql            
+        mysql -u root -p bitnami trolleyes < ./storage/trolleyes.sql            
       
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
