--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: Verify MySQL connection
-      run: |
-        mysql --version
-        sudo apt-get install -y mysql-client
-        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami -e "SHOW DATABASES"
+    #- name: Verify MySQL connection
+    #  run: |
+    #    mysql --version
+    #    sudo apt-get install -y mysql-client
+    #    mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami -e "SHOW DATABASES"
       
     - name: Setting Up DB
       run: |
@@ -41,6 +41,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       # run: mvn compile
