--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       
     - name: Setting Up DB
       run: |
-        mysql -h 127.0.0.1 --protocol=tcp -uroot -pbitnami trolleyes< ./trolleyes.sql            
+        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami trolleyes < ./trolleyes.sql            
       
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
