--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,11 @@ jobs:
     - name: Setting Up DB
       run: |
         mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami trolleyes < ./trolleyes.sql            
-      
+    
+    - name: Test DB
+      run: |
+        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami -e 'SELECT * FROM tipousuario;'
+    
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
