--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
     
     - name: Test DB
       run: |
-        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami -e 'SELECT * FROM tipousuario;'
+        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami --database=trolleyes -e 'SELECT * FROM tipousuario;'
     
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
