--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,40 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_DATABASE: trolleyes
+          # MYSQL_USER: root
+          # MYSQL_PASSWORD: bitnami
+          MYSQL_ROOT_PASSWORD: bitnami
+          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
+        ports:
+        - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: actions/checkout@v2
+      
+    #- name: Verify MySQL connection
+    #  run: |
+    #    mysql --version
+    #    sudo apt-get install -y mysql-client
+    #    mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -pbitnami -e "SHOW DATABASES"
+      
+    - name: Setting Up DB
+      run: |
+        mysql -uroot -pbitnami trolleyes< ./trolleyes.sql            
+      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    
     - name: Build with Maven
-      run: mvn clean package
-      # run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
+      # run: mvn compile
+      # run: mvn clean package
+      # run: mvn -f github-actions-java-maven/pom.xml clean verify
