--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,16 @@ spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
 #subida de imagenes (pte)
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 
-
-
 debug=true
+
+i_name=TROLLEYES
+i_date=2021-Sept
+i_version=1.0
+i_author=Rafael Aznar
+i_license=MIT License
+i_sources=https://github.com/rafaelaznar
